// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calendar year is 2021, and quarters start on January 1st > CurrentQuarter 1`] = `
<div>
  <svg>
    <g
      class="current-quarter"
    >
      <path
        d="M0,-360A360,360,0,0,1,359.917,-7.746L79.981,-1.721A80,80,0,0,0,0,-80Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
    </g>
  </svg>
</div>
`;

exports[`calendar year is 2021, and quarters start on January 1st > Quarters 1`] = `
<div>
  <svg>
    <g
      class="quarters"
    >
      <path
        d="M0,-144A144,144,0,0,1,143.967,-3.098L79.981,-1.721A80,80,0,0,0,0,-80Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
      <path
        d="M143.967,-3.098A144,144,0,0,1,3.718,143.952L2.065,79.973A80,80,0,0,0,79.981,-1.721Z"
        fill="rgb(204, 121, 167)"
        stroke="white"
      />
      <path
        d="M3.718,143.952A144,144,0,0,1,-143.988,1.859L-79.993,1.033A80,80,0,0,0,2.065,79.973Z"
        fill="rgb(86, 180, 233)"
        stroke="white"
      />
      <path
        d="M-143.988,1.859A144,144,0,0,1,0,-144L0,-80A80,80,0,0,0,-79.993,1.033Z"
        fill="rgb(0, 158, 115)"
        stroke="white"
      />
    </g>
  </svg>
</div>
`;

exports[`calendar year is 2021, and quarters start on July 1st > CurrentQuarter 1`] = `
<div>
  <svg>
    <g
      class="current-quarter"
    >
      <path
        d="M0,-360A360,360,0,0,1,359.917,-7.746L79.981,-1.721A80,80,0,0,0,0,-80Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
    </g>
  </svg>
</div>
`;

exports[`calendar year is 2021, and quarters start on July 1st > Quarters 1`] = `
<div>
  <svg>
    <g
      class="quarters"
    >
      <path
        d="M0,-144A144,144,0,0,1,143.967,-3.098L79.981,-1.721A80,80,0,0,0,0,-80Z"
        fill="rgb(240, 228, 66)"
        stroke="white"
      />
      <path
        d="M143.967,-3.098A144,144,0,0,1,3.718,143.952L2.065,79.973A80,80,0,0,0,79.981,-1.721Z"
        fill="rgb(204, 121, 167)"
        stroke="white"
      />
      <path
        d="M3.718,143.952A144,144,0,0,1,-143.988,1.859L-79.993,1.033A80,80,0,0,0,2.065,79.973Z"
        fill="rgb(86, 180, 233)"
        stroke="white"
      />
      <path
        d="M-143.988,1.859A144,144,0,0,1,0,-144L0,-80A80,80,0,0,0,-79.993,1.033Z"
        fill="rgb(0, 158, 115)"
        stroke="white"
      />
    </g>
  </svg>
</div>
`;
